# auth-test

./: .gitignore  CLAUDE.md  README.md  alembic.ini  database.py  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: e025edfaca56_create_user_table.py
app/: config.py  main.py  models.py
app/auth/: dependencies.py  router.py  schemas.py  service.py
app/db/: base.py  base_class.py  session.py
app/schemas/: schema.py
app/users/: router.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/components/: HomeView.vue  SignupView.vue
frontend/src/router/: index.ts
