[project]
name = "auth-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy>=2.0.50",
]

[tool.fastapi]
entrypoint = "app.main:app"
